style.css
/* ... */
.role::before {
  content: '';
  position: absolute;
  bottom: 0;
  width: 30px;
  height: 1px;
  background-color: var(--secondary-color);
  margin-bottom: 1rem;
}

.more-feature {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.more-btn {
  width: 100%;
  text-align: center;
  padding: 0.5rem;
  border: 1px solid var(--primary-color);
  transition: all 0.2s ease-in-out;
}

.more-btn:hover {
  background-color: var(--secondary-color);
  border: 1px solid var(--secondary-color);
  color: var(--white-color);
}

/* ============ partner section css =========== */
.partner {
  background-color: var(--primary-color);
  color: var(--white-color);
  padding: 1rem 0;
  position: relative;
  overflow: hidden;
}

.partner-title {
  z-index: 2;
}

.partner-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.partner-list .partner-item {
  max-width: 100px;
  margin-right: 1rem;
}

.partner-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(236, 82, 66, 0.05);
  backdrop-filter: blur(0.7rem);
  opacity: 0.5;
}

/* ::::::::::======= About us page ======::::::::: */

/* ======= landing section ===== */
.landing {
  background-color: var(--gray-color-2);
  color: var(--primary-color);
  padding: 5rem 0;
}

.about-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.about-content .about-welcome-text {
  color: var(--secondary-color);
  font-weight: 400;
  margin-bottom: 0.5rem;
}

.about-content h1 {
  color: var(--secondary-color);
  font-size: 36px;
  font-weight: 900;
  line-height: 1;
  margin-bottom: 3rem;
}

.about-content .about-p {
  background-color: var(--white-color);
  padding: 0.5rem;
  border: 1px solid var(--gray-color);
  margin-bottom: 1rem;
}

.Email-btn {
  text-decoration: underline;
  font-weight: 600;
  transition: all 0.2s ease-in-out;
}

.Email-btn i {
  margin-left: 0.3rem;
}

.Email-btn:hover {
  color: var(--secondary-color);
}

/* ======= Logo exposition css ===== */
.logo-exposition {
  padding: 3rem 0;
  background-color: var(--white-color);
  border-bottom: 1px solid var(--gray-color);
}

.logo-exposition-content {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.logo-exposition-content .logo-exposition-title {
  margin-bottom: 1rem;
}

.logo-exposition-content .logo-exposition-p {
  margin-bottom: 2rem;
  max-width: 40rem;
}

.logo-exposition-content .logo-exposition-l {
  border: 1px solid var(--gray-color);
  padding: 1rem 2rem;
}

/* history section css */
.history {
  padding: 3rem 0;
  text-align: center;
}

.history .history-content-desc {
  margin-bottom: 1.5rem;
}

.history-title {
  margin-bottom: 0.2rem !important;
}

.history-cards {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
}

.history-card {
  color: var(--white-color);
  position: relative;
}

.card-overlay {
  width: 100%;
  padding: 4rem 1rem;
  background-color: rgba(236, 82, 66, 0.7);
}

.card-1 {
  background-image: url('img/card-1.jpg');
  background-position: center;
  background-size: cover;
}

.card-2 {
  background-image: url('img/card-2.jpg');
  background-position: center;
  background-size: cover;
}

.history-card-title {
  font-weight: 900;
}

.history-card-p {
  font-size: 14px;
}

/* ======== Footer section css ========== */
.footer {
  color: var(--primary-color);
  padding: 1rem 0;
}

.about-footer {
  color: white;
  background-color: var(--primary-color) !important;
}

.footer-content {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.footer-content .footer-logo {
  max-width: 30%;
}

.footer-content .footer-logo h1 {
  font-size: 20px;
}

.footer-content .footer-adress {
  font-size: 12px;
  font-weight: 500;
}

/* ================= media query =============== */
@media screen and (min-width: 768px) {
  /* top navbar */
  .user-login-popup {
    position: absolute;
    top: 1.5rem;
    right: 3.5rem;
  }

  /* ===== navbar ====== */
  .menu-btn {
    display: none;
  }

  .navbar-right {
    position: relative;
    padding: 0;
    background: transparent;
    backdrop-filter: none;
    transform: translateX(0);
    transition: transform 0.4s;
  }

  .navbar-nav {
    flex-direction: row;
  }

  .navbar-nav li {
    font-size: 16px;
  }

  .navbar-nav li:hover {
    color: var(--secondary-color);
  }

  .nav-btn {
    border: 2px solid var(--secondary-color);
    color: var(--secondary-color);
  }

  .nav-btn:hover {
    background-color: var(--secondary-color);
    color: var(--white-color);
  }

  .section-title::before {
    right: 48%;
  }

  .hero-bg {
    background-image: url('img/bkgrnd.png');
  }

  /* program section */
  .program-item {
    flex-direction: column;
    padding: 1rem 0;
    text-align: center;
  }

  .program-item .program-item-text {
    width: 100%;
  }

  .program-btn {
    display: none;
  }

  .program-btn-b {
    display: block;
  }

  /* feature section css */
  .feature-list {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2rem;
    padding: 1rem 5rem;
    height: auto;
  }

  .more-feature {
    display: none;
  }

  /* ============ about page ======== */
  .about-p {
    max-width: 40rem;
    margin-bottom: 2rem !important;
  }

  .history-cards {
    flex-direction: row;
  }
}

